# screenerX.ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: deploy-hostinger.yml
data/: nasdaq100_tickers.txt  nifty100_fallback.csv
deploy/: Caddyfile.example  Caddyfile.screenerx.ai  Caddyfile.stockscreenerx.com
src/swing/: config.py  main.py
src/swing/analysis/: indicators.py  levels.py  scorer.py  signals.py
src/swing/data/: cache.py  fetcher.py  nifty_indices.py  us_stocks.py
src/swing/utils/: logger.py
src/swing/web/: app.py  security.py
src/swing/web/static/: admin.html  admin.js  app.js  index.html  login.html  style.css
